menambahkan tugas asynchronous

--- a/MAIA/pom.xml
+++ b/MAIA/pom.xml
@@ -11,5 +11,20 @@
     <version>7.6.1</version>
     <scope>test</scope>
 </dependency>
+<!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
+<dependency>
+    <groupId>io.rest-assured</groupId>
+    <artifactId>rest-assured</artifactId>
+    <version>5.1.1</version>
+    <scope>test</scope>
+</dependency>
+<!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
+<dependency>
+    <groupId>com.googlecode.json-simple</groupId>
+    <artifactId>json-simple</artifactId>
+    <version>1.1.1</version>
+</dependency>
+
+
    </dependencies>
 </project>
