--- a/MAIA/pom.xml
+++ b/MAIA/pom.xml
@@ -24,7 +24,9 @@
     <artifactId>json-simple</artifactId>
     <version>1.1.1</version>
 </dependency>
-
-
    </dependencies>
+<properties>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+    </properties>
 </project>
