--- a/MAIA/.classpath
+++ b/MAIA/.classpath
@@ -13,15 +13,49 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
-		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-17">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-api-4.4.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-api-4.4.0-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-chrome-driver-4.4.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-chrome-driver-4.4.0-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-chromium-driver-4.4.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-chromium-driver-4.4.0-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-devtools-v85-4.4.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-devtools-v85-4.4.0-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-devtools-v102-4.4.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-devtools-v102-4.4.0-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-devtools-v103-4.4.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-devtools-v103-4.4.0-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-devtools-v104-4.4.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-devtools-v104-4.4.0-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-edge-driver-4.4.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-edge-driver-4.4.0-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-firefox-driver-4.4.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-firefox-driver-4.4.0-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-http-4.4.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-http-4.4.0-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-ie-driver-4.4.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-ie-driver-4.4.0-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-java-4.4.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-java-4.4.0-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-json-4.4.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-json-4.4.0-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-opera-driver-4.4.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-opera-driver-4.4.0-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-remote-driver-4.4.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-remote-driver-4.4.0-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-safari-driver-4.4.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-safari-driver-4.4.0-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-support-4.4.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-support-4.4.0-sources.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
