--- a/MAIA/pom.xml
+++ b/MAIA/pom.xml
@@ -24,6 +24,24 @@
     <artifactId>json-simple</artifactId>
     <version>1.1.1</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+<dependency>
+    <groupId>org.seleniumhq.selenium</groupId>
+    <artifactId>selenium-java</artifactId>
+    <version>4.4.0</version>
+</dependency>
+<dependency>
+		    <groupId>io.github.bonigarcia</groupId>
+		    <artifactId>webdrivermanager</artifactId>
+		    <version>5.1.0</version>
+		</dependency>
+
+<dependency>
+	        <groupId>com.google.guava</groupId>
+	        <artifactId>guava</artifactId>
+	        <version>31.0.1-jre</version>
+	    </dependency>
+
    </dependencies>
 <properties>
         <maven.compiler.source>17</maven.compiler.source>
