--- a/MAIA/.classpath
+++ b/MAIA/.classpath
@@ -15,6 +15,7 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-17">
 		<attributes>
+			<attribute name="module" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
@@ -23,55 +24,21 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-api-4.4.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-api-4.4.0-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-chrome-driver-4.4.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-chrome-driver-4.4.0-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-chromium-driver-4.4.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-chromium-driver-4.4.0-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-devtools-v85-4.4.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-devtools-v85-4.4.0-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-devtools-v102-4.4.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-devtools-v102-4.4.0-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-devtools-v103-4.4.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-devtools-v103-4.4.0-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-devtools-v104-4.4.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-devtools-v104-4.4.0-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-edge-driver-4.4.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-edge-driver-4.4.0-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-firefox-driver-4.4.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-firefox-driver-4.4.0-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-http-4.4.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-http-4.4.0-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-ie-driver-4.4.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-ie-driver-4.4.0-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-java-4.4.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-java-4.4.0-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-json-4.4.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-json-4.4.0-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-opera-driver-4.4.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-opera-driver-4.4.0-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-remote-driver-4.4.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-remote-driver-4.4.0-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-safari-driver-4.4.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-safari-driver-4.4.0-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-support-4.4.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/NEXSOFT/Documents/lmsJuaraKoding/selenium-tut/selenium-java-4.4.0/selenium-support-4.4.0-sources.jar"/>
 	<classpathentry kind="src" path="target/generated-sources/annotations">
 		<attributes>
+			<attribute name="ignore_optional_problems" value="true"/>
 			<attribute name="optional" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
-			<attribute name="ignore_optional_problems" value="true"/>
 			<attribute name="m2e-apt" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" output="target/test-classes" path="target/generated-test-sources/test-annotations">
 		<attributes>
+			<attribute name="ignore_optional_problems" value="true"/>
+			<attribute name="test" value="true"/>
 			<attribute name="optional" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
-			<attribute name="ignore_optional_problems" value="true"/>
 			<attribute name="m2e-apt" value="true"/>
-			<attribute name="test" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path=".apt_generated">
@@ -81,8 +48,8 @@
 	</classpathentry>
 	<classpathentry kind="src" output="target/test-classes" path=".apt_generated_tests">
 		<attributes>
-			<attribute name="optional" value="true"/>
 			<attribute name="test" value="true"/>
+			<attribute name="optional" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
