--- a/MAIA/pom.xml
+++ b/MAIA/pom.xml
@@ -70,7 +70,12 @@
     <artifactId>commons-io</artifactId>
     <version>2.11.0</version>
 </dependency>
-
+<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+<dependency>
+    <groupId>org.seleniumhq.selenium</groupId>
+    <artifactId>selenium-java</artifactId>
+    <version>4.4.0</version>
+</dependency>
 
    </dependencies>
 <properties>
